--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
